# repo-atlas

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  dashboard.html  pyproject.toml  run.sh
.github/workflows/: build-and-deploy.yml
docs/: architecture.md
handoff/: current-task.md  cursor-prompt.md
prompts/: cursor-task-template.md
scripts/: analyze_portfolio.py  fetch_repos.py  handoff_state.py  relay_to_cursor.py  render_reports.py
src/repo_atlas/: __init__.py
web/: package-lock.json  package.json
web/app/: page.tsx
