[project]
name = "repo-atlas"
version = "0.1.0"
description = "GitHub account-level portfolio intelligence workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8.0",
  "requests>=2.32.0",
  "networkx>=3.3",
]

[project.optional-dependencies]
web = [
  "next>=14.0.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
